<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/failure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/failure"
        android:icon="@drawable/baseline_playlist_remove_24"/>
    <item
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/done"
        android:icon="@drawable/baseline_playlist_add_check_24"/>
    <item
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/close"
        android:icon="@drawable/baseline_done_24"/>
    <item
        android:id="@+id/token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/token"
        android:icon="@drawable/baseline_key_24"/>
</menu>