<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".BreakdownClose">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_text_failureName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/numerBT"
            android:inputType="number"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textField_description"
            android:layout_width="match_parent"
            android:layout_height="329dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/form_location"
            android:inputType="textMultiLine" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textField_computerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/form_branch" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/form_buttonSave"
        android:text="@string/button_close_failure"
        android:layout_alignParentBottom="true"
        android:minHeight="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>